--- a/Gomoku/Gomoku.csproj
+++ b/Gomoku/Gomoku.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AIPlayer.cs" />
     <Compile Include="Board.cs">
       <SubType>Component</SubType>
     </Compile>
