--- a/Gomoku/Gomoku.csproj
+++ b/Gomoku/Gomoku.csproj
@@ -51,6 +51,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ChessNumChangeEventArgs.cs" />
+    <Compile Include="ClientControl.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GameOverEventArgs.cs" />
     <Compile Include="MainForm.cs">
