--- a/Gomoku/Gomoku.csproj
+++ b/Gomoku/Gomoku.csproj
@@ -106,10 +106,12 @@
     <Compile Include="Message.cs" />
     <Compile Include="MessageProcessEventArgs.cs" />
     <Compile Include="Player.cs" />
+    <Compile Include="PlayerNumberException.cs" />
     <Compile Include="PlayerOnline.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RedisHelper.cs" />
+    <Compile Include="RoomInfo.cs" />
     <Compile Include="StartForm.cs">
       <SubType>Form</SubType>
     </Compile>
